added images and update html,css file

--- a/html-file/index.html
+++ b/html-file/index.html
@@ -13,7 +13,7 @@
     <title>Stardenbart Field Protocol</title>
   </head>
   <body>
-    <header id="container">
+    <header>
       <div id="page-logo">
         <a href="../html-file/index.html">Travel Goals</a>
       </div>
@@ -26,8 +26,14 @@
     </header>
 
     <main>
-      <section></section>
-      <section></section>
+      <section id="hero">
+        <div id="hero-content">
+          <h1>Random Travel Page</h1>
+          <p>Let's explore the world together!</p>
+          <a href="../html-file/places.html">Discover Places</a>
+        </div>
+      </section>
+      <section id="highlights"></section>
     </main>
 
     <footer></footer>
