--- a/html-file/index.html
+++ b/html-file/index.html
@@ -28,14 +28,42 @@
     <main>
       <section id="hero">
         <div id="hero-content">
-          <h1>Random Travel Page</h1>
+          <h1>Strdnbrt Travel Page</h1>
           <p>Let's explore the world together!</p>
           <a href="../html-file/places.html">Discover Places</a>
         </div>
       </section>
-      <section id="highlights"></section>
+      <section id="highlights">
+        <h2>Highlights</h2>
+        <ul id="destinations">
+          <li class="destination">
+            <img src="../images/miami.jpg" alt="Miami Street on Sunny Day" />
+            <p>Miami <strong>USA</strong></p>
+          </li>
+          <li class="destination">
+            <img src="../images/munich.jpg" alt="Munich Stadium in Winter" />
+            <p>Munich <strong>Germany</strong></p>
+          </li>
+          <li class="destination">
+            <img src="../images/barcelona.jpg" alt="Palm Beach in Barcelona" />
+            <p>Barcelona <strong>Spain</strong></p>
+          </li>
+        </ul>
+      </section>
     </main>
-
-    <footer></footer>
+    <footer>
+      <ul id="social">
+        <li class="sosmed">
+          <a href="https://instagram.com/affaruqq/"
+            ><img src="../images/insta.png" alt="Instagram"
+          /></a>
+        </li>
+        <li class="sosmed">
+          <a href="https://facebook.com/farouq.abdullah.73997"
+            ><img src="../images/facebook.png" alt="Facebook"
+          /></a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
