update html files

--- a/html-file/index.html
+++ b/html-file/index.html
@@ -10,7 +10,7 @@
     />
     <link rel="stylesheet" href="../styles/global-style.css" />
     <link rel="stylesheet" href="../styles/index-style.css" />
-    <title>Stardenbart Field Protocol</title>
+    <title>STRDNBRT Field Protocol</title>
   </head>
   <body>
     <header>
@@ -24,7 +24,6 @@
         </ul>
       </nav>
     </header>
-
     <main>
       <section id="hero">
         <div id="hero-content">
@@ -52,15 +51,15 @@
       </section>
     </main>
     <footer>
-      <ul id="social">
-        <li class="sosmed">
+      <ul>
+        <li>
           <a href="https://instagram.com/affaruqq/"
-            ><img src="../images/insta.png" alt="Instagram"
+            ><img src="../images/insta.png" alt="Instagram-Logo"
           /></a>
         </li>
-        <li class="sosmed">
+        <li>
           <a href="https://facebook.com/farouq.abdullah.73997"
-            ><img src="../images/facebook.png" alt="Facebook"
+            ><img src="../images/facebook.png" alt="Facebook-Logo"
           /></a>
         </li>
       </ul>
