--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/global-style.css" />
-    <link rel="stylesheet" href="../styles/index-style.css" />
+    <link rel="stylesheet" href="/styles/global-style.css" />
+    <link rel="stylesheet" href="/styles/index-style.css" />
     <title>STRDNBRT Field Protocol</title>
   </head>
   <body>
     <header>
       <div id="page-logo">
-        <a href="../html-file/index.html">Travel Goals</a>
+        <a href="index.html">Travel Goals</a>
       </div>
       <nav>
         <ul>
-          <li><a href="../html-file/places.html">Destination</a></li>
-          <li><a href="../html-file/about.html">About</a></li>
+          <li><a href="places.html">Destination</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
       </nav>
     </header>
@@ -29,22 +29,22 @@
         <div id="hero-content">
           <h1>Strdnbrt Travel Page</h1>
           <p>Let's explore the world together!</p>
-          <a href="../html-file/places.html">Discover Places</a>
+          <a href="places.html">Discover Places</a>
         </div>
       </section>
       <section id="highlights">
         <h2>Highlights</h2>
         <ul id="destinations">
           <li class="destination">
-            <img src="../images/miami.jpg" alt="Miami Street on Sunny Day" />
+            <img src="/images/miami.jpg" alt="Miami Street on Sunny Day" />
             <p>Miami <strong>USA</strong></p>
           </li>
           <li class="destination">
-            <img src="../images/munich.jpg" alt="Munich Stadium in Winter" />
+            <img src="/images/munich.jpg" alt="Munich Stadium in Winter" />
             <p>Munich <strong>Germany</strong></p>
           </li>
           <li class="destination">
-            <img src="../images/barcelona.jpg" alt="Palm Beach in Barcelona" />
+            <img src="/images/barcelona.jpg" alt="Palm Beach in Barcelona" />
             <p>Barcelona <strong>Spain</strong></p>
           </li>
         </ul>
@@ -54,12 +54,12 @@
       <ul>
         <li>
           <a href="https://instagram.com/affaruqq/"
-            ><img src="../images/insta.png" alt="Instagram-Logo"
+            ><img src="/images/insta.png" alt="Instagram-Logo"
           /></a>
         </li>
         <li>
           <a href="https://facebook.com/farouq.abdullah.73997"
-            ><img src="../images/facebook.png" alt="Facebook-Logo"
+            ><img src="/images/facebook.png" alt="Facebook-Logo"
           /></a>
         </li>
       </ul>
