--- a/places.html
+++ b/places.html
@@ -8,22 +8,22 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Oleo+Script:wght@700&family=Quicksand:wght@300;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../styles/global-style.css" />
-    <link rel="stylesheet" href="../styles/places-style.css" />
+    <link rel="stylesheet" href="/styles/global-style.css" />
+    <link rel="stylesheet" href="/styles/places-style.css" />
     <title>STRDNBRT Places</title>
   </head>
   <body>
     <header>
       <div id="page-logo">
-        <a href="../html-file/index.html">Travel Goals</a>
+        <a href="index.html">Travel Goals</a>
       </div>
       <nav>
         <ul>
           <li>
-            <a href="../html-file/places.html">Destination</a>
+            <a href="places.html">Destination</a>
           </li>
           <li>
-            <a href="../html-file/about.html">About</a>
+            <a href="about.html">About</a>
           </li>
         </ul>
       </nav>
@@ -31,7 +31,7 @@
     <main>
         <ul>
             <li>
-              <img src="../images/barcelona.jpg" alt="City of Barcelona" />
+              <img src="/images/barcelona.jpg" alt="City of Barcelona" />
               <div class="item-content">
                 <div>
                   <h2>Barcelona</h2>
@@ -46,7 +46,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/hawaii.jpg" alt="Hawaii beach" />
+              <img src="/images/hawaii.jpg" alt="Hawaii beach" />
               <div class="item-content">
                 <div>
                   <h2>Hawaii</h2>
@@ -56,12 +56,12 @@
                   </p>
                 </div>
                 <div class="actions">
-                  <a href="hhttps://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
+                  <a href="https://en.wikipedia.org/wiki/Hawaii">Explore &#x2192</a>
                 </div>
               </div>
             </li>
             <li>
-              <img src="../images/london.jpg" alt="London city" />
+              <img src="/images/london.jpg" alt="London city" />
               <div class="item-content">
                 <div>
                   <h2>London</h2>
@@ -80,7 +80,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/miami.jpg" alt="Miami streets" />
+              <img src="/images/miami.jpg" alt="Miami streets" />
               <div class="item-content">
                 <div>
                   <h2>Miami</h2>
@@ -95,7 +95,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/munich.jpg" alt="Munich football stadium" />
+              <img src="/images/munich.jpg" alt="Munich football stadium" />
               <div class="item-content">
                 <div>
                   <h2>Munich</h2>
@@ -110,7 +110,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/new-york-city.jpg" alt="New York City skyline" />
+              <img src="/images/new-york-city.jpg" alt="New York City skyline" />
               <div class="item-content">
                 <div>
                   <h2>New York City</h2>
@@ -127,7 +127,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/paris.jpg" alt="Paris city" />
+              <img src="/images/paris.jpg" alt="Paris city" />
               <div class="item-content">
                 <div>
                   <h2>Paris</h2>
@@ -142,7 +142,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/sydney.jpg" alt="Sydney beach" />
+              <img src="/images/sydney.jpg" alt="Sydney beach" />
               <div class="item-content">
                 <div>
                   <h2>Sydney</h2>
@@ -157,7 +157,7 @@
               </div>
             </li>
             <li>
-              <img src="../images/tokyo.jpg" alt="Tokyo skyline" />
+              <img src="/images/tokyo.jpg" alt="Tokyo skyline" />
               <div class="item-content">
                 <div>
                   <h2>Tokyo</h2>
@@ -192,12 +192,12 @@
       <ul>
         <li>
           <a href="https://instagram.com/affaruqq/"
-            ><img src="../images/insta.png" alt="Instagram-Logo"
+            ><img src="/images/insta.png" alt="Instagram-Logo"
           /></a>
         </li>
         <li>
           <a href="https://facebook.com/farouq.abdullah.73997"
-            ><img src="../images/facebook.png" alt="Facebook-Logo"
+            ><img src="/images/facebook.png" alt="Facebook-Logo"
           /></a>
         </li>
       </ul>
